Change the default behavior of copy_from to always copy all data, support previous mode when 'incremental: true' flag is set
Signed-off-by: Łukasz Gryglicki <lukaszgryglicki@o2.pl>

--- a/sources/example/copy_from_pattern.yaml
+++ b/sources/example/copy_from_pattern.yaml
@@ -7,6 +7,7 @@ data_sources:
   - name: https://wiki.hyperledger.org/
     copy_from:
       pattern: 'sds-hyperledger-*,-*-raw,-*-for-merge'
+      incremental: true
       #pattern: 'sds-hyperledger-shared-*,-*-raw,-*-for-merge'
       #pattern: sds-hyperledger-shared-confluence
       must:
