--- a/sources/example/copy_index1/aries.yaml
+++ b/sources/example/copy_index1/aries.yaml
@@ -7,6 +7,7 @@ data_sources:
   - name: https://wiki.hyperledger.org/
     copy_from:
       pattern: sds-hyperledger-shared-confluence
+      incremental: true
       no_origin: true
       must:
       - column: space
