--- a/sources/example/copy_index2/fabric.yaml
+++ b/sources/example/copy_index2/fabric.yaml
@@ -8,6 +8,7 @@ data_sources:
     project: Fabric
     copy_from:
       pattern: sds-hyperledger-shared-confluence
+      incremental: true
       must:
       - column: space
         value: '.*fabric.*'
