Add project no origin support
Signed-off-by: Łukasz Gryglicki <lukaszgryglicki@o2.pl>

--- a/sources/example/copy_from_pattern.yaml
+++ b/sources/example/copy_from_pattern.yaml
@@ -3,13 +3,16 @@ native:
   slug: lg/test
 data_sources:
 - slug: confluence
-  endpoints:
-  - name: https://wiki.hyperledger.org/
-    copy_from:
-      pattern: 'sds-hyperledger-*,-*-raw,-*-for-merge'
-      incremental: true
-      #pattern: 'sds-hyperledger-shared-*,-*-raw,-*-for-merge'
-      #pattern: sds-hyperledger-shared-confluence
-      must:
-      - column: space
-        value: '.*(ARIES|burrow).*'
+  projects:
+  - name: 'All'
+    no_origin: true
+    endpoints:
+    - name: https://wiki.hyperledger.org/
+      copy_from:
+        pattern: 'sds-hyperledger-*,-*-raw,-*-for-merge'
+        incremental: true
+        # pattern: 'sds-hyperledger-shared-*,-*-raw,-*-for-merge'
+        # pattern: sds-hyperledger-shared-confluence
+        must:
+        - column: space
+          value: '.*(ARIES|burrow).*'
