Cache Top Contributors API call in SDS 2
Signed-off-by: Łukasz Gryglicki <lukaszgryglicki@o2.pl>

--- a/helm-charts/sds-helm/sds-helm/values.yaml
+++ b/helm-charts/sds-helm/sds-helm/values.yaml
@@ -109,6 +109,7 @@
 # skipSortDuration: '1'
 # skipMerge: '1'
 # skipHideEmails: '1'
+# skipCacheTopContributors: '1'
 # skipCopyFrom: '1'
 # skipOrgMap: '1'
 # skipEnrichDS: '1'
@@ -167,6 +168,7 @@ skipSyncInfo: ''
 skipSortDuration: ''
 skipMerge: ''
 skipHideEmails: ''
+skipCacheTopContributors: ''
 skipCopyFrom: ''
 skipOrgMap: ''
 skipEnrichDS: ''
