--- a/helm-charts/sds-helm/sds-helm/templates/sync-cron-job.yaml
+++ b/helm-charts/sds-helm/sds-helm/templates/sync-cron-job.yaml
@@ -132,6 +132,8 @@ spec:
               value: '{{ $root.Values.skipMerge }}'
             - name: SDS_SKIP_HIDE_EMAILS
               value: '{{ $root.Values.skipHideEmails }}'
+            - name: SDS_SKIP_CACHE_TOP_CONTRIBUTORS
+              value: '{{ $root.Values.skipCacheTopContributors }}'
             - name: SDS_SKIP_ORG_MAP
               value: '{{ $root.Values.skipOrgMap }}'
             - name: SDS_SKIP_ENRICH_DS
