--- a/sources/example/dads_jira_example.yaml
+++ b/sources/example/dads_jira_example.yaml
@@ -11,6 +11,8 @@ data_sources:
   config:
   - name: dads
     value: true
+  - name: legacy-uuid
+    value: true
   - name: multi-origin
     value: true
   - name: es-bulk-size
