--- a/sources/example/dads_jira_test.yaml
+++ b/sources/example/dads_jira_test.yaml
@@ -11,6 +11,8 @@ data_sources:
   config:
   - name: dads
     value: true
+  - name: legacy-uuid
+    value: true
   - name: from-date
     value: '2020-09-01'
   - name: multi-origin
