Update the example
Signed-off-by: Łukasz Gryglicki <lukaszgryglicki@o2.pl>

--- a/sources/example/dads_jira_test.yaml
+++ b/sources/example/dads_jira_test.yaml
@@ -13,6 +13,10 @@ data_sources:
     value: true
   - name: legacy-uuid
     value: true
+  #- name: dry-run
+  #  value: true
+  #- name: no-cache
+  #  value: true
   - name: from-date
     value: '2020-09-01'
   - name: multi-origin
