--- a/sources/example/dads_groupsio_example.yaml
+++ b/sources/example/dads_groupsio_example.yaml
@@ -11,7 +11,7 @@ data_sources:
   - name: email
     value: x@z.yy
   - name: password
-    value: zzz
+    value: zzzZZZzzz
   - name: dads
     value: true
   - name: legacy-uuid
