--- a/sources/sds-deployment.yaml
+++ b/sources/sds-deployment.yaml
@@ -17,6 +17,7 @@ environments:
       SDS_SCROLL_SIZE: 500
       SDS_ES_BULKSIZE: 500
       SDS_TASKS_SKIP_RE: '^sds-(lfn-odl-gerrit|open-mainframe-project|accord|acr|acrn|allseen|alljoyn|act|agl|bitcoin-protocol|cc|CC|cephfoundation|chaoss|ojsf-chassis|chips|cip|clusterduck|cni|caf|ccc|cdf|cord-datacenter|cord-central-office-re-architected-as-a-datacenter|cregit|datapractices|dent|desktopwg|easycla|elisa|finops|finos|fossbazaar|foundationdb|frr|gql|internet-security-research-group|interuss|iovisor|janusgraph|kernelci|openkinetic|laminas|lets-encrypt|lf-asia-llc|lfph|lsb|linuxboot|llvmlinux|ltsi|lvfs|mapzen|mojaglobal|newticity|onf|O3DE|o3de|a11y|open-alliance-for-cloud-adoption|opencontainers|open-network-operating-system-onos|osecc|osapa|ova|open-voice-network|ovs|openbel|openbmc|openchain|OEEW|oeew|openfabrics-inc|openhpc|ojsf|openmama|openmessaging|openpowerfoundation|opensds|osquery|patentcommons|quartermaster|rcons|real-time-linux|redteam|rtdb|riscv|risc-v-international|sel4|soda-foundation|sof|tlf|openssf|reactive|tizen|ucf|korg|cncf)-'   # specifying which tasks should be skipped, can be something like '^sds-(foundation1|foundation2|...|foundationN)-'
+      SDS_DATASOURCES_SKIP_RE: "slack$"
   - name: prod-cncf
     cron: '0 8 * * *'                   # attempt sync at 8 AM UTC, nothing will happen if the previous sync still runs
     command_prefix: '/usr/bin'
@@ -31,6 +32,7 @@ environments:
       SDS_SCROLL_SIZE: 1000
       SDS_ES_BULKSIZE: 1000
       SDS_TASKS_RE: '^sds-cncf-'        # the opposite of the main task - we specify which tasks should run in this deployment (instead of specifying which tasks should be skipped as in prod-main deployment)
+      SDS_DATASOURCES_SKIP_RE: "slack$"
   - name: prod-korg
     cron: '0 14 * * *'                  # attempt sync at 8 AM UTC, nothing will happen if the previous sync still runs
     command_prefix: '/usr/bin'
@@ -60,6 +62,21 @@ environments:
       SDS_SCROLL_SIZE: 1000
       SDS_ES_BULKSIZE: 1000
       SDS_TASKS_RE: '^sds-(lfn-odl-gerrit|open-mainframe-project|accord|acr|acrn|allseen|alljoyn|act|agl|bitcoin-protocol|cc|CC|cephfoundation|chaoss|ojsf-chassis|chips|cip|clusterduck|cni|caf|ccc|cdf|cord-datacenter|cord-central-office-re-architected-as-a-datacenter|cregit|datapractices|dent|desktopwg|easycla|elisa|finops|finos|fossbazaar|foundationdb|frr|gql|internet-security-research-group|interuss|iovisor|janusgraph|kernelci|openkinetic|laminas|lets-encrypt|lf-asia-llc|lfph|lsb|linuxboot|llvmlinux|ltsi|lvfs|mapzen|mojaglobal|newticity|onf|O3DE|o3de|a11y|open-alliance-for-cloud-adoption|opencontainers|open-network-operating-system-onos|osecc|osapa|ova|open-voice-network|ovs|openbel|openbmc|openchain|OEEW|oeew|openfabrics-inc|openhpc|ojsf|openmama|openmessaging|openpowerfoundation|opensds|osquery|patentcommons|quartermaster|rcons|real-time-linux|redteam|rtdb|riscv|risc-v-international|sel4|soda-foundation|sof|tlf|openssf|reactive|tizen|ucf|cncf)-'
+      SDS_DATASOURCES_SKIP_RE: "slack$"
+  - name: prod-slack
+    cron: '0 8 * * *'                   # attempt sync at 8 AM UTC, nothing will happen if the previous sync still runs
+    command_prefix: '/usr/bin'
+    csv_prefix: '/root'
+    cron_env: 'PATH=$PATH:/snap/bin'
+    temp_dir: '/tmp'
+    deploy_env: prod
+    env:
+      SDS_SILENT: 1
+      SDS_TASK_TIMEOUT_SECONDS: 43200
+      SDS_NCPUS_SCALE: 0.3              # here we give max 30% of CPU cores available. So if OS reorts say 10 CPU cores, at most 3 threads will be used.
+      SDS_SCROLL_SIZE: 1000
+      SDS_ES_BULKSIZE: 1000
+      SDS_TASKS_RE: '(academy-software-foundation|dronecode|odpi)(.*)-slack'
 - name: test                            # this will run on the 'test' env
   deployments:
   - name: test-main
