--- a/sources/sds-deployment.yaml
+++ b/sources/sds-deployment.yaml
@@ -2,8 +2,17 @@
 environments:
 - name: prod                            # this will run on the 'prod' env
   deployments:
+  - name: prod-master
+    master: true                        # master task, this one will process all special SDS tasks, other tasks will receive "SDS_ONLY_P2O=1"
+    cron: '*/30 * * * *'                # it means that task will attempt to sync every 30 minutes, but will skip when another SDS instance related to this deployment (prod-main) runs
+    command_prefix: '/usr/bin'          # Next few vars are just our EC2 instances specific
+    csv_prefix: '/root'
+    cron_env: 'PATH=$PATH:/snap/bin'
+    temp_dir: '/tmp'
+    env:                                # List of all possible SDS env variables is here: https://github.com/LF-Engineering/sync-data-sources/blob/master/sources/context.go#L12
+      SDS_SKIP_P2O: 1                   # Only special tasks like maintaining aliases/views/renames/drops etc
+      SDS_NO_INDEX_DROP: 1              # Do not delete any indices, just issue a warning instead
   - name: prod-main
-    master: true                        # main task, this one will also process all special SDS tasks, other tasks will receive "SDS_ONLY_P2O=1"
     cron: '*/10 * * * *'                # it means that task will attempt to sync every 10 minutes, but will skip when another SDS instance related to this deployment (prod-main) runs
     command_prefix: '/usr/bin'          # Next few vars are just our EC2 instances specific
     csv_prefix: '/root'
@@ -17,7 +26,7 @@ environments:
       SDS_SCROLL_SIZE: 500
       SDS_ES_BULKSIZE: 500
       SDS_TASKS_SKIP_RE: '^sds-(lfn-odl-gerrit|open-mainframe-project|accord|acr|acrn|allseen|alljoyn|act|agl|bitcoin-protocol|cc|CC|cephfoundation|chaoss|ojsf-chassis|chips|cip|clusterduck|cni|caf|ccc|cdf|cord-datacenter|cord-central-office-re-architected-as-a-datacenter|cregit|datapractices|dent|desktopwg|easycla|elisa|finops|finos|fossbazaar|foundationdb|frr|gql|internet-security-research-group|interuss|iovisor|janusgraph|kernelci|openkinetic|laminas|lets-encrypt|lf-asia-llc|lfph|lsb|linuxboot|llvmlinux|ltsi|lvfs|mapzen|mojaglobal|newticity|onf|O3DE|o3de|a11y|open-alliance-for-cloud-adoption|opencontainers|open-network-operating-system-onos|osecc|osapa|ova|open-voice-network|ovs|openbel|openbmc|openchain|OEEW|oeew|openfabrics-inc|openhpc|ojsf|openmama|openmessaging|openpowerfoundation|opensds|osquery|patentcommons|quartermaster|rcons|real-time-linux|redteam|rtdb|riscv|risc-v-international|sel4|soda-foundation|sof|tlf|openssf|reactive|tizen|ucf|korg|cncf)-'   # specifying which tasks should be skipped, can be something like '^sds-(foundation1|foundation2|...|foundationN)-'
-      SDS_DATASOURCES_SKIP_RE: "slack$"
+      SDS_DATASOURCES_SKIP_RE: '^slack$'
   - name: prod-cncf
     cron: '0 8 * * *'                   # attempt sync at 8 AM UTC, nothing will happen if the previous sync still runs
     command_prefix: '/usr/bin'
@@ -32,7 +41,7 @@ environments:
       SDS_SCROLL_SIZE: 1000
       SDS_ES_BULKSIZE: 1000
       SDS_TASKS_RE: '^sds-cncf-'        # the opposite of the main task - we specify which tasks should run in this deployment (instead of specifying which tasks should be skipped as in prod-main deployment)
-      SDS_DATASOURCES_SKIP_RE: "slack$"
+      SDS_DATASOURCES_SKIP_RE: '^slack$'
   - name: prod-korg
     cron: '0 14 * * *'                  # attempt sync at 8 AM UTC, nothing will happen if the previous sync still runs
     command_prefix: '/usr/bin'
@@ -62,7 +71,7 @@ environments:
       SDS_SCROLL_SIZE: 1000
       SDS_ES_BULKSIZE: 1000
       SDS_TASKS_RE: '^sds-(lfn-odl-gerrit|open-mainframe-project|accord|acr|acrn|allseen|alljoyn|act|agl|bitcoin-protocol|cc|CC|cephfoundation|chaoss|ojsf-chassis|chips|cip|clusterduck|cni|caf|ccc|cdf|cord-datacenter|cord-central-office-re-architected-as-a-datacenter|cregit|datapractices|dent|desktopwg|easycla|elisa|finops|finos|fossbazaar|foundationdb|frr|gql|internet-security-research-group|interuss|iovisor|janusgraph|kernelci|openkinetic|laminas|lets-encrypt|lf-asia-llc|lfph|lsb|linuxboot|llvmlinux|ltsi|lvfs|mapzen|mojaglobal|newticity|onf|O3DE|o3de|a11y|open-alliance-for-cloud-adoption|opencontainers|open-network-operating-system-onos|osecc|osapa|ova|open-voice-network|ovs|openbel|openbmc|openchain|OEEW|oeew|openfabrics-inc|openhpc|ojsf|openmama|openmessaging|openpowerfoundation|opensds|osquery|patentcommons|quartermaster|rcons|real-time-linux|redteam|rtdb|riscv|risc-v-international|sel4|soda-foundation|sof|tlf|openssf|reactive|tizen|ucf|cncf)-'
-      SDS_DATASOURCES_SKIP_RE: "slack$"
+      SDS_DATASOURCES_SKIP_RE: '^slack$'
   - name: prod-slack
     cron: '0 8 * * *'                   # attempt sync at 8 AM UTC, nothing will happen if the previous sync still runs
     command_prefix: '/usr/bin'
@@ -79,8 +88,17 @@ environments:
       SDS_TASKS_RE: '(academy-software-foundation|dronecode|odpi)(.*)-slack'
 - name: test                            # this will run on the 'test' env
   deployments:
+  - name: test-master
+    master: true                        # master task, this one will process all special SDS tasks, other tasks will receive "SDS_ONLY_P2O=1"
+    cron: '*/30 * * * *'                # it means that task will attempt to sync every 30 minutes, but will skip when another SDS instance related to this deployment (prod-main) runs
+    command_prefix: '/usr/bin'          # Next few vars are just our EC2 instances specific
+    csv_prefix: '/root'
+    cron_env: 'PATH=$PATH:/snap/bin'
+    temp_dir: '/tmp'
+    env:                                # List of all possible SDS env variables is here: https://github.com/LF-Engineering/sync-data-sources/blob/master/sources/context.go#L12
+      SDS_SKIP_P2O: 1                   # Only special tasks like maintaining aliases/views/renames/drops etc
+      SDS_NO_INDEX_DROP: 1              # Do not delete any indices, just issue a warning instead
   - name: test-main
-    master: true
     cron: '0 * * * *'
     command_prefix: '/usr/bin'
     csv_prefix: '/root'
