--- a/docker-images/Dockerfile
+++ b/docker-images/Dockerfile
@@ -5,6 +5,7 @@ RUN go get -u github.com/json-iterator/go
 RUN git clone --branch v7.10.0 https://github.com/elastic/go-elasticsearch.git $GOPATH/src/github.com/elastic/go-elasticsearch/v7
 RUN go get -u github.com/LF-Engineering/ssaw/ssawsync
 RUN go get -u github.com/LF-Engineering/sync-data-sources/sources
+RUN go get -u github.com/PuerkitoBio/goquery
 RUN go get -u github.com/LF-Engineering/da-ds
 RUN CGO_ENABLED=0 go install -ldflags '-s' github.com/LF-Engineering/da-ds/cmd/dads
 WORKDIR /go/src/github.com/LF-Engineering/sync-data-sources/sources
