Fix SDS image build after some PRs were merged outside this repo
Signed-off-by: Łukasz Gryglicki <lukaszgryglicki@o2.pl>

--- a/docker-images/Dockerfile
+++ b/docker-images/Dockerfile
@@ -6,6 +6,7 @@ RUN git clone --branch v7.10.0 https://github.com/elastic/go-elasticsearch.git $
 RUN go get -u github.com/LF-Engineering/ssaw/ssawsync
 RUN go get -u github.com/LF-Engineering/sync-data-sources/sources
 RUN go get -u github.com/PuerkitoBio/goquery
+RUN go get -u github.com/avast/retry-go
 RUN go get -u github.com/LF-Engineering/da-ds
 RUN CGO_ENABLED=0 go install -ldflags '-s' github.com/LF-Engineering/da-ds/cmd/dads
 WORKDIR /go/src/github.com/LF-Engineering/sync-data-sources/sources
