--- a/sources/sds-deployment.yaml
+++ b/sources/sds-deployment.yaml
@@ -112,6 +112,7 @@ environments:
       SDS_SKIP_PROJECT_TS: 1
       SDS_SKIP_SORT_DURATION: 1
       SDS_NO_INDEX_DROP: 1              # Do not delete any indices, just issue a warning instead
+      SDS_DATASOURCES_SKIP_RE: '^github'
   - name: test-main
     cron: '0 * * * *'
     command_prefix: '/usr/bin'
@@ -125,6 +126,7 @@ environments:
       SDS_SCROLL_SIZE: 500
       SDS_ES_BULKSIZE: 500
       SDS_TASKS_SKIP_RE: '(project1-bugzilla|project1-gerrit|project1-rocketchat|academy-software-foundation-openshadinglanguage-github|cncf-fluxcd-slack|cncf-keda-slack|cncf-opentracing-slack|open-mainframe-project-cobol-programming-course-slack|open-mainframe-project-genevaers-slack|test-test-project-slack|cncf-nats-slack|open-mainframe-project-tersedecompress-slack|open-mainframe-project-education-slack|open-mainframe-project-zorow-slack|lfedge-project-eve-slack|cncf-chubaofs-slack|cncf-harbor-slack|cncf-helm-slack|cncf-jaeger-slack|cncf-kubernetes-slack|lfedge-fledge-slack|cncf-nsm-slack|cncf-openebs-slack|open-mainframe-project-zowe-slack|cncf-backstage-slack|cncf-bfe-slack|cncf-coredns-slack|cncf-rook-slack|open-mainframe-project-feilong-slack|cncf-falco-slack|cncf-longhorn-slack|cncf-strimzi-slack|cncf-thanos-slack|open-mainframe-project-atom-plugins-slack|cncf-fluentd-slack|cncf-keptn-slack|cncf-opentelemetry-slack|cncf-rkt-slack|cncf-cortex-slack|cncf-smi-slack|lfedge-open-horizon-slack|cncf-argo-slack|cncf-envoy-slack|open-mainframe-project-ade-slack|open-mainframe-project-polycephaly-slack|lfedge-home-edge-slack|cncf-k3s-slack|cncf-spiffe-slack|lfai-shared-slack|cncf-openservicemesh-slack|cncf-porter-slack|cncf-cncf-slack|AuthToken-slack|cncf-buildpacks-slack|cncf-grpc-slack|cncf-notary-slack|cncf-prometheus-slack|lfedge-akraino-edge-stack-slack|cncf-kudo-slack|cncf-linkerd-slack|cncf-openmetrics-slack|cncf-tremor-slack|open-mainframe-project-ambitus-slack|open-mainframe-project-softwarediscoverytool-slack|lfedge-baetyl-slack|lfedge-state-of-the-edge-slack|cncf-cloudevents-slack|cncf-containerd-slack|cncf-tuf-slack|cncf-volcano-slack|lfedge-securedeviceonboard-slack|cncf-intoto-slack|cncf-keylime-slack|cncf-parsec-slack|lfedge-edgex-foundry-slack)'
+      SDS_DATASOURCES_SKIP_RE: '^github'
   - name: test-slow
     cron: '*/10 * * * *'
     command_prefix: '/usr/bin'
@@ -136,3 +138,4 @@ environments:
       SDS_SILENT: 1
       SDS_ES_BULKSIZE: 100
       SDS_TASKS_RE: '(project1-bugzilla|project1-gerrit|project1-rocketchat|academy-software-foundation-openshadinglanguage-github)'
+      SDS_DATASOURCES_SKIP_RE: '^github'
