--- a/helm-charts/sds-helm/sds-helm/templates/secrets.yaml
+++ b/helm-charts/sds-helm/sds-helm/templates/secrets.yaml
@@ -155,7 +155,8 @@ missing_github_secret: "Please take a look at the NOTES.txt file"
 {{- $auth0Audience := or .Values.auth0Audience (.Files.Get (printf "secrets/AUTH0_AUDIENCE.%s.secret" .Values.deployEnv)) -}}
 {{- $auth0ClientID := or .Values.auth0ClientID (.Files.Get (printf "secrets/AUTH0_CLIENT_ID.%s.secret" .Values.deployEnv)) -}}
 {{- $auth0ClientSecret := or .Values.auth0ClientSecret (.Files.Get (printf "secrets/AUTH0_CLIENT_SECRET.%s.secret" .Values.deployEnv)) -}}
-{{ if and $auth0URL $auth0Audience $auth0ClientID $auth0ClientSecret }}
+{{- $auth0Data := or .Values.auth0Data (.Files.Get (printf "secrets/AUTH0_DATA.%s.secret" .Values.deployEnv)) -}}
+{{ if and $auth0URL $auth0Audience $auth0ClientID $auth0ClientSecret $auth0Data }}
 ---
 apiVersion: v1
 data:
@@ -163,6 +164,7 @@ data:
   AUTH0_AUDIENCE.secret: {{ $auth0Audience | b64enc }}
   AUTH0_CLIENT_ID.secret: {{ $auth0ClientID | b64enc }}
   AUTH0_CLIENT_SECRET.secret: {{ $auth0ClientSecret | b64enc }}
+  AUTH0_DATA.secret: {{ $auth0Data | b64enc }}
 kind: Secret
 metadata:
   namespace: '{{ .Values.namespace }}'
