--- a/helm-charts/sds-helm/sds-helm/values.yaml
+++ b/helm-charts/sds-helm/sds-helm/values.yaml
@@ -12,6 +12,7 @@
 # auth0Audience: ''
 # auth0ClientID: ''
 # auth0ClientSecret: ''
+# auth0Data: ''
 # ssawURL: ''
 # affiliationAPIURL: ''
 # metricsAPIURL: ''
