--- a/helm-charts/sds-helm/sds-helm/values.yaml
+++ b/helm-charts/sds-helm/sds-helm/values.yaml
@@ -107,6 +107,7 @@
 # skipSortDuration: '1'
 # skipMerge: '1'
 # skipHideEmails: '1'
+# skipMetadata: '1'
 # skipCacheTopContributors: '1'
 # skipCopyFrom: '1'
 # skipOrgMap: '1'
@@ -166,6 +167,7 @@ skipSyncInfo: ''
 skipSortDuration: ''
 skipMerge: ''
 skipHideEmails: ''
+skipMetadata: ''
 skipCacheTopContributors: ''
 skipCopyFrom: ''
 skipOrgMap: ''
