--- a/sources/sds-deployment.yaml
+++ b/sources/sds-deployment.yaml
@@ -66,6 +66,7 @@ environments:
       SDS_NCPUS_SCALE: 0.35             # here we give max 35% of CPU cores available. So if OS reorts say 10 CPU cores, at most 3 threads will be used.
       SDS_SCROLL_SIZE: 1000
       SDS_ES_BULKSIZE: 1000
+      SDS_DATASOURCES_SKIP_RE: '^slack$'
       SDS_TASKS_RE: '^sds-korg-'        # the opposite of the main task - we specify which tasks should run in this deployment (instead of specifying which tasks should be skipped as in prod-main deployment)
       SDS_SKIP_SSAW: 1
   - name: prod-others
@@ -83,21 +84,6 @@ environments:
       SDS_ES_BULKSIZE: 1000
       SDS_TASKS_RE: '^sds-(lfn-odl-gerrit|open-mainframe-project|accord|acrn|allseen|alljoyn|act|agl|bitcoin-protocol|cc|CC|cephfoundation|chaoss|ojsf-chassis|chips|cip|clusterduck|cni|caf|ccc|cdf|cord-datacenter|cord-central-office-re-architected-as-a-datacenter|cregit|datapractices|dent|desktopwg|easycla|elisa|finops|finos|fossbazaar|frr|gql|internet-security-research-group|interuss|iovisor|janusgraph|kernelci|openkinetic|laminas|lets-encrypt|lf-asia-llc|lfph|lsb|linuxboot|llvmlinux|ltsi|lvfs|mapzen|mojaglobal|newticity|onf|O3DE|o3de|a11y|open-alliance-for-cloud-adoption|opencontainers|open-network-operating-system-onos|osecc|osapa|ova|open-voice-network|ovs|openbel|openbmc|openchain|OEEW|oeew|openfabrics-inc|openhpc|ojsf|openmama|openmessaging|openpowerfoundation|opensds|osquery|patentcommons|quartermaster|rcons|real-time-linux|redteam|rtdb|riscv|risc-v-international|sel4|soda-foundation|sof|tlf|openssf|reactive|tizen|ucf|cncf)-'
       SDS_DATASOURCES_SKIP_RE: '^slack$'
-      SDS_SKIP_SSAW: 1
-  - name: prod-slack
-    cron: '0 6 * * *'                   # attempt sync at 8 AM UTC, nothing will happen if the previous sync still runs
-    command_prefix: '/usr/bin'
-    csv_prefix: '/root'
-    cron_env: 'PATH=$PATH:/snap/bin'
-    temp_dir: '/tmp'
-    deploy_env: prod
-    env:
-      SDS_SILENT: 1
-      SDS_TASK_TIMEOUT_SECONDS: 43200
-      SDS_NCPUS_SCALE: 0.3              # here we give max 30% of CPU cores available. So if OS reorts say 10 CPU cores, at most 3 threads will be used.
-      SDS_SCROLL_SIZE: 1000
-      SDS_ES_BULKSIZE: 1000
-      SDS_TASKS_RE: '(academy-software-foundation|dronecode|odpi)(.*)-slack'
       SDS_SKIP_SSAW: 1
 - name: test                            # this will run on the 'test' env
   deployments:
@@ -118,7 +104,7 @@ environments:
       SDS_SKIP_PROJECT_TS: 1
       SDS_SKIP_SORT_DURATION: 1
       SDS_NO_INDEX_DROP: 1              # Do not delete any indices, just issue a warning instead
-      SDS_DATASOURCES_SKIP_RE: '^github'
+      SDS_DATASOURCES_SKIP_RE: '^(github.*|slack)'
       SDS_SKIP_SSAW: 1
   - name: test-main
     cron: '0 * * * *'
@@ -132,8 +118,8 @@ environments:
       SDS_NCPUS_SCALE: 2
       SDS_SCROLL_SIZE: 500
       SDS_ES_BULKSIZE: 500
-      SDS_TASKS_SKIP_RE: '(project1-bugzilla|project1-gerrit|project1-rocketchat|academy-software-foundation-openshadinglanguage-github|cncf-fluxcd-slack|cncf-keda-slack|cncf-opentracing-slack|open-mainframe-project-cobol-programming-course-slack|open-mainframe-project-genevaers-slack|test-test-project-slack|cncf-nats-slack|open-mainframe-project-tersedecompress-slack|open-mainframe-project-education-slack|open-mainframe-project-zorow-slack|lfedge-project-eve-slack|cncf-chubaofs-slack|cncf-harbor-slack|cncf-helm-slack|cncf-jaeger-slack|cncf-kubernetes-slack|lfedge-fledge-slack|cncf-nsm-slack|cncf-openebs-slack|open-mainframe-project-zowe-slack|cncf-backstage-slack|cncf-bfe-slack|cncf-coredns-slack|cncf-rook-slack|open-mainframe-project-feilong-slack|cncf-falco-slack|cncf-longhorn-slack|cncf-strimzi-slack|cncf-thanos-slack|open-mainframe-project-atom-plugins-slack|cncf-fluentd-slack|cncf-keptn-slack|cncf-opentelemetry-slack|cncf-rkt-slack|cncf-cortex-slack|cncf-smi-slack|lfedge-open-horizon-slack|cncf-argo-slack|cncf-envoy-slack|open-mainframe-project-ade-slack|open-mainframe-project-polycephaly-slack|lfedge-home-edge-slack|cncf-k3s-slack|cncf-spiffe-slack|lfai-shared-slack|cncf-openservicemesh-slack|cncf-porter-slack|cncf-cncf-slack|AuthToken-slack|cncf-buildpacks-slack|cncf-grpc-slack|cncf-notary-slack|cncf-prometheus-slack|lfedge-akraino-edge-stack-slack|cncf-kudo-slack|cncf-linkerd-slack|cncf-openmetrics-slack|cncf-tremor-slack|open-mainframe-project-ambitus-slack|open-mainframe-project-softwarediscoverytool-slack|lfedge-baetyl-slack|lfedge-state-of-the-edge-slack|cncf-cloudevents-slack|cncf-containerd-slack|cncf-tuf-slack|cncf-volcano-slack|lfedge-securedeviceonboard-slack|cncf-intoto-slack|cncf-keylime-slack|cncf-parsec-slack|lfedge-edgex-foundry-slack)'
-      SDS_DATASOURCES_SKIP_RE: '^github'
+      SDS_TASKS_SKIP_RE: '(project1-bugzilla|project1-gerrit|project1-rocketchat)'
+      SDS_DATASOURCES_SKIP_RE: '^(github.*|slack)'
       SDS_SKIP_SSAW: 1
   - name: test-slow
     cron: '*/10 * * * *'
@@ -146,5 +132,5 @@ environments:
       SDS_SILENT: 1
       SDS_ES_BULKSIZE: 100
       SDS_TASKS_RE: '(project1-bugzilla|project1-gerrit|project1-rocketchat|academy-software-foundation-openshadinglanguage-github)'
-      SDS_DATASOURCES_SKIP_RE: '^github'
+      SDS_DATASOURCES_SKIP_RE: '^(github.*|slack)'
       SDS_SKIP_SSAW: 1
