--- a/helm-charts/sds-helm/sds-helm/templates/sync-cron-job.yaml
+++ b/helm-charts/sds-helm/sds-helm/templates/sync-cron-job.yaml
@@ -144,6 +144,8 @@ spec:
               value: '{{ $root.Values.skipCopyFrom }}'
             - name: SDS_SKIP_P2O
               value: '{{ $root.Values.skipP2O }}'
+            - name: SDS_SKIP_F_ALIASES
+              value: '{{ $root.Values.skipFAliases }}'
             - name: SDS_SKIP_VALIDATE_GITHUB_API
               value: '{{ $root.Values.skipValGitHubAPI }}'
             - name: SDS_ONLY_VALIDATE
