--- a/helm-charts/sds-helm/sds-helm/values.yaml
+++ b/helm-charts/sds-helm/sds-helm/values.yaml
@@ -175,6 +175,7 @@ skipEnrichDS: ''
 skipP2O: ''
 skipValGitHubAPI: ''
 skipAPI: ''
+skipFAliases: ''
 onlyValidate: ''
 onlyP2O: ''
 noMultiAliases: ''
