--- a/docker-images/Dockerfile
+++ b/docker-images/Dockerfile
@@ -2,12 +2,16 @@ FROM golang:1.15 AS builder
 RUN apt-get update -y && apt-get upgrade -y && apt-get install -y ca-certificates openssh-client git curl make
 RUN go get -u gopkg.in/yaml.v2
 RUN go get -u github.com/json-iterator/go
+RUN go get -u github.com/LF-Engineering/da-ds
+# Hack to build da-ds: starts
+RUN cd /go/src/github.com/LF-Engineering/da-ds
+RUN git checkout lg-kh
+# Hack to build da-ds: ends
 RUN go get -u github.com/LF-Engineering/sync-data-sources/sources
 RUN go get -u github.com/PuerkitoBio/goquery
 RUN go get -u github.com/avast/retry-go
 RUN go get -u github.com/dgrijalva/jwt-go
 RUN go get -u github.com/google/uuid
-RUN go get -u github.com/LF-Engineering/da-ds
 RUN CGO_ENABLED=0 go install -ldflags '-s' github.com/LF-Engineering/da-ds/cmd/dads
 WORKDIR /go/src/github.com/LF-Engineering/sync-data-sources/sources
 RUN make -f ./Makefile dockerinstall
