Disable korg for a moment
Signed-off-by: Łukasz Gryglicki <lukaszgryglicki@o2.pl>

--- a/sources/sds-deployment.yaml
+++ b/sources/sds-deployment.yaml
@@ -53,6 +53,7 @@ environments:
       SDS_DATASOURCES_SKIP_RE: '^slack$'
       SDS_SKIP_SSAW: 1
   - name: prod-korg
+    disabled: true
     cron: '0 14 * * *'                  # attempt sync at 8 AM UTC, nothing will happen if the previous sync still runs
     command_prefix: '/usr/bin'
     csv_prefix: '/root'
