--- a/sources/sds-deployment.yaml
+++ b/sources/sds-deployment.yaml
@@ -28,7 +28,6 @@ environments:
     temp_dir: '/tmp'
     env:                                # List of all possible SDS env variables is here: https://github.com/LF-Engineering/sync-data-sources/blob/master/sources/context.go#L12
       SDS_SILENT: 1
-      SDS_NO_INDEX_DROP: 1              # Do not delete any indices, just issue a warning instead
       SDS_TASK_TIMEOUT_SECONDS: 43200
       SDS_NCPUS_SCALE: 1.5              # attempt to create 1.5 * number of CPU cores tasks for this deployment
       SDS_SCROLL_SIZE: 500
@@ -104,7 +103,7 @@ environments:
       SDS_SKIP_PROJECT: 1
       SDS_SKIP_PROJECT_TS: 1
       SDS_SKIP_SORT_DURATION: 1
-      SDS_NO_INDEX_DROP: 1              # Do not delete any indices, just issue a warning instead
+      #SDS_NO_INDEX_DROP: 1              # Do not delete any indices, just issue a warning instead
       SDS_DATASOURCES_SKIP_RE: '^(github.*|slack)'
       SDS_SKIP_SSAW: 1
   - name: test-main
@@ -115,7 +114,6 @@ environments:
     temp_dir: '/tmp'
     env:
       SDS_SILENT: 1
-      SDS_NO_INDEX_DROP: 1              # Do not delete any indices, just issue a warning instead
       SDS_NCPUS_SCALE: 2
       SDS_SCROLL_SIZE: 500
       SDS_ES_BULKSIZE: 500
