--- a/docker-images/Dockerfile.nop2o
+++ b/docker-images/Dockerfile.nop2o
@@ -29,7 +29,7 @@ RUN git checkout -b ${BRANCH} "origin/${BRANCH}"
 RUN git pull
 RUN make -f ./Makefile dockerinstall
 FROM alpine
-RUN apk add git cloc
+RUN apk add bash cloc git
 COPY docker-images/.gitconfig /root/.gitconfig
 COPY docker-images/scripts/*.sh /
 COPY --from=builder /go/bin/syncdatasources /usr/bin/
