--- a/docker-images/Dockerfile.nop2o
+++ b/docker-images/Dockerfile.nop2o
@@ -39,4 +39,6 @@ COPY sources/data.zip /data.zip
 COPY sources/detect-removed-commits.sh /usr/bin/
 #COPY sources/sds.yaml /data/sds.txt
 COPY docker-images/.vimrc /root/.vimrc
+RUN git clone "https://github.com/AlDanial/cloc.git" --branch "v1.90" --single-branch
+COPY /cloc/cloc /usr/bin
 CMD /bin/bash
