--- a/docker-images/Dockerfile.nop2o
+++ b/docker-images/Dockerfile.nop2o
@@ -29,7 +29,7 @@ RUN git checkout -b ${BRANCH} "origin/${BRANCH}"
 RUN git pull
 RUN make -f ./Makefile dockerinstall
 FROM alpine
-RUN apk update && apk add bash cloc git ca-certificates openssh-client && rm -rf /var/cache/apk/*
+RUN apk update && apk add bash git ca-certificates openssh-client && rm -rf /var/cache/apk/*
 COPY docker-images/.gitconfig /root/.gitconfig
 COPY docker-images/scripts/*.sh /
 COPY --from=builder /go/bin/syncdatasources /usr/bin/
@@ -39,4 +39,6 @@ COPY sources/data.zip /data.zip
 COPY sources/detect-removed-commits.sh /usr/bin/
 #COPY sources/sds.yaml /data/sds.txt
 COPY docker-images/.vimrc /root/.vimrc
+RUN git clone "https://github.com/AlDanial/cloc.git" --branch "v1.90" --single-branch
+COPY /cloc/cloc /usr/bin
 CMD /bin/bash
