--- a/docker-images/Dockerfile.nop2o
+++ b/docker-images/Dockerfile.nop2o
@@ -40,5 +40,5 @@ COPY sources/detect-removed-commits.sh /usr/bin/
 #COPY sources/sds.yaml /data/sds.txt
 COPY docker-images/.vimrc /root/.vimrc
 RUN git clone "https://github.com/AlDanial/cloc.git" --branch "v1.90" --single-branch
-COPY /cloc/cloc /usr/bin
+RUN cp /cloc/cloc /usr/bin
 CMD /bin/bash
